--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "express-validator": "^6.13.0",
+    "express-validator": "^5.3.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
+    "multer": "^1.4.0",
     "mysql2": "^1.6.1",
+    "nodemailer": "^4.6.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
