--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-validator": "^6.14.0",
+    "mongoose": "^6.1.7",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "prettier": "2.5.1"
   }
 }
