--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
