--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.14.0",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
     "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1"
+    "socket.io-client": "^4.4.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
